--- a/client/src/app/student-home/student-home.component.html
+++ b/client/src/app/student-home/student-home.component.html
@@ -1,10 +1,16 @@
 <div class="main-container">
-    <header class="header-6">
+    <header class="header-4">
         <div class="branding">
             <a href="..." class="nav-link">
                 <clr-icon shape="book"></clr-icon>
                 <span class="title">NaoBlocks</span>
             </a>
+        </div>
+        <div class="header-nav">
+            <a href="javascript://" class="nav-link nav-text">Play</a>
+            <a href="javascript://" class="nav-link nav-text">Stop</a>
+            <a href="javascript://" class="nav-link nav-text">Load</a>
+            <a href="javascript://" class="nav-link nav-text">Save</a>
         </div>
         <div class="header-actions">
             <clr-dropdown>
@@ -24,15 +30,5 @@
         <div class="content-area">
             ...
         </div>
-        <nav class="sidenav">
-            <section class="sidenav-content">
-                <a href="..." class="nav-link active">
-                    Students
-                </a>
-                <a href="..." class="nav-link">
-                    Robots
-                </a>
-            </section>
-        </nav>
     </div>
 </div>
