--- a/client/src/app/student-home/student-home.component.html
+++ b/client/src/app/student-home/student-home.component.html
@@ -28,7 +28,8 @@
     </header>
     <div class="content-container">
         <div class="content-area">
-            ...
+            <div id="blocklyDiv" style="width: 100%; height: 100%"></div>
+
         </div>
     </div>
 </div>
