--- a/client/src/app/student-home/student-home.component.html
+++ b/client/src/app/student-home/student-home.component.html
@@ -19,9 +19,10 @@
                     <clr-icon shape="caret down"></clr-icon>
                 </button>
                 <clr-dropdown-menu *clrIfOpen clrPosition="bottom-right">
-                    <a href="..." clrDropdownItem>About</a>
-                    <a href="..." clrDropdownItem>Preferences</a>
-                    <a href="..." clrDropdownItem>Log out</a>
+                    <a href="javascript://" clrDropdownItem>Preferences</a>
+                    <a href="javascript://" clrDropdownItem (click)="about.show()">About</a>
+                    <div class="dropdown-divider" role="separator"></div>
+                    <a href="javascript://" clrDropdownItem (click)="logout()">Log out</a>
                 </clr-dropdown-menu>
             </clr-dropdown>
         </div>
@@ -31,4 +32,5 @@
             <div id="blocklyDiv" style="width: 100%; height: 100%"></div>
         </div>
     </div>
+    <app-about></app-about>
 </div>
