--- a/client/src/app/admin-home/admin-home.component.html
+++ b/client/src/app/admin-home/admin-home.component.html
@@ -1,5 +1,20 @@
+<div class="alert alert-app-level alert-danger" role="alert" *ngIf="!hasAccess">
+    <div class="alert-items">
+        <div class="alert-item static">
+            <div class="alert-icon-wrapper">
+                <clr-icon class="alert-icon" shape="exclamation-circle"></clr-icon>
+            </div>
+            <div class="alert-text">
+                You do not have access to this role
+            </div>
+            <div class="alert-actions">
+                <button class="btn alert-action" (click)="changeRole()">Change Role</button>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="main-container">
-    <header class="header-1">
+    <header class="header-4">
         <div class="branding">
             <a href="..." class="nav-link">
                 <clr-icon shape="book"></clr-icon>
@@ -13,9 +28,12 @@
                     <clr-icon shape="caret down"></clr-icon>
                 </button>
                 <clr-dropdown-menu *clrIfOpen clrPosition="bottom-right">
-                    <a href="..." clrDropdownItem>About</a>
-                    <a href="..." clrDropdownItem>Preferences</a>
-                    <a href="..." clrDropdownItem>Log out</a>
+                    <a href="javascript://" clrDropdownItem>Preferences</a>
+                    <a href="javascript://" clrDropdownItem (click)="changeRole()">Change Role</a>
+                    <div class="dropdown-divider" role="separator"></div>
+                    <a href="javascript://" clrDropdownItem (click)="about.show()">About</a>
+                    <div class="dropdown-divider" role="separator"></div>
+                    <a href="javascript://" clrDropdownItem (click)="logout()">Log out</a>
                 </clr-dropdown-menu>
             </clr-dropdown>
         </div>
@@ -32,4 +50,6 @@
             </section>
         </nav>
     </div>
+    <app-about></app-about>
+    <app-change-role [role]="'Administrator'"></app-change-role>
 </div>
