--- a/client/src/app/admin-home/admin-home.component.html
+++ b/client/src/app/admin-home/admin-home.component.html
@@ -40,12 +40,20 @@
     </header>
     <div class="content-container">
         <div class="content-area">
-            ...
+            <app-logs-list *ngIf="currentView=='logs'"></app-logs-list>
+            <app-settings-editor *ngIf="currentView=='settings'"></app-settings-editor>
+            <app-users-list *ngIf="currentView=='users'"></app-users-list>
         </div>
         <nav class="sidenav">
             <section class="sidenav-content">
-                <a href="..." class="nav-link active">
+                <a href="javascript://" class="nav-link" [class.active]="currentView=='logs'" (click)="changeView('logs')">
+                    Logs
+                </a>
+                <a href="javascript://" class="nav-link" [class.active]="currentView=='settings'" (click)="changeView('settings')">
                     Settings
+                </a>
+                <a href="javascript://" class="nav-link" [class.active]="currentView=='users'" (click)="changeView('users')">
+                    Users
                 </a>
             </section>
         </nav>
