--- a/client/src/app/students-list/students-list.component.html
+++ b/client/src/app/students-list/students-list.component.html
@@ -1,42 +1,50 @@
-<clr-datagrid [(clrDgSelected)]="selected" [clrDgLoading]="isLoading">
-    <clr-dg-action-bar>
-        <div class="btn-group">
-            <button type="button" class="btn btn-sm btn-secondary" (click)="doAddNew()">
-                <clr-icon shape="plus"></clr-icon> Add New
-            </button>
-            <button type="button" class="btn btn-sm btn-secondary" (click)="doDelete()" [disabled]="selected.length === 0">
-                <clr-icon shape="close"></clr-icon> Delete
-            </button>
-            <button type="button" class="btn btn-sm btn-secondary" (click)="doEdit()" [disabled]="selected.length !== 1">
-                <clr-icon shape="pencil"></clr-icon> Edit
-            </button>
-        </div>
-        <div class="btn-group">
-            <clr-dropdown>
-                <button type="button" class="btn btn-sm btn-secondary" clrDropdownTrigger>
-                    Export
-                    <clr-icon shape="caret down"></clr-icon>
+<div *ngIf="!isInEditor">
+    <clr-datagrid [(clrDgSelected)]="selected" [clrDgLoading]="isLoading">
+        <clr-dg-action-bar>
+            <div class="btn-group">
+                <button type="button" class="btn btn-sm btn-secondary" (click)="doAddNew()">
+                    <clr-icon shape="plus"></clr-icon> Add New
                 </button>
-                <clr-dropdown-menu clrPosition="bottom-left" *clrIfOpen>
-                    <button type="button" (click)="doExport(true)" clrDropdownItem>Export All</button>
-                    <button type="button" (click)="doExport(false)" [disabled]="selected.length === 0"
-                        clrDropdownItem>Export Selected Items</button>
-                </clr-dropdown-menu>
-            </clr-dropdown>
-        </div>
-    </clr-dg-action-bar>
+                <button type="button" class="btn btn-sm btn-secondary" (click)="doEdit()"
+                    [disabled]="selected.length !== 1">
+                    <clr-icon shape="pencil"></clr-icon> Edit
+                </button>
+                <button type="button" class="btn btn-sm btn-secondary" (click)="doDelete()"
+                    [disabled]="selected.length === 0">
+                    <clr-icon shape="close"></clr-icon> Delete
+                </button>
+            </div>
+            <div class="btn-group">
+                <clr-dropdown>
+                    <button type="button" class="btn btn-sm btn-secondary" clrDropdownTrigger>
+                        Export
+                        <clr-icon shape="caret down"></clr-icon>
+                    </button>
+                    <clr-dropdown-menu clrPosition="bottom-left" *clrIfOpen>
+                        <button type="button" (click)="doExportDetails()" clrDropdownItem [disabled]="selected.length === 0">Details</button>
+                        <button type="button" (click)="doExportLogs()" clrDropdownItem [disabled]="selected.length === 0">Logs</button>
+                    </clr-dropdown-menu>
+                </clr-dropdown>
+            </div>
+        </clr-dg-action-bar>
 
-    <clr-dg-column [clrDgField]="'name'">Name</clr-dg-column>
-    <clr-dg-column [clrDgField]="'whenAdded'">
-        <ng-container *clrDgHideableColumn="{hidden: date}">
-            When Added
-        </ng-container>
-    </clr-dg-column>
+        <clr-dg-column [clrDgField]="'name'">Name</clr-dg-column>
+        <clr-dg-column [clrDgField]="'whenAdded'">
+            <ng-container *clrDgHideableColumn="{hidden: date}">
+                When Added
+            </ng-container>
+        </clr-dg-column>
 
-    <clr-dg-row *clrDgItems="let student of students.items" [clrDgItem]="student">
-        <clr-dg-cell>{{student.name}}</clr-dg-cell>
-        <clr-dg-cell>{{student.whenAdded | date}}</clr-dg-cell>
-    </clr-dg-row>
+        <clr-dg-row *clrDgItems="let student of students.items" [clrDgItem]="student">
+            <clr-dg-cell>{{student.name}}</clr-dg-cell>
+            <clr-dg-cell>{{student.whenAdded | date}}</clr-dg-cell>
+        </clr-dg-row>
 
-    <clr-dg-footer>{{students.count}} students</clr-dg-footer>
-</clr-datagrid>
+        <clr-dg-footer>{{students.count}} students</clr-dg-footer>
+
+        <clr-dg-placeholder>We couldn't find any students</clr-dg-placeholder>
+    </clr-datagrid>
+</div>
+<div *ngIf="isInEditor">
+    <app-student-editor [student]="currentStudent" (closed)="onClosed($event)"></app-student-editor>
+</div>
