--- a/client/src/app/students-list/students-list.component.html
+++ b/client/src/app/students-list/students-list.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!isInEditor">
+<div *ngIf="isInList">
     <clr-datagrid [(clrDgSelected)]="selected" [clrDgLoading]="isLoading">
         <clr-dg-action-bar>
             <div class="btn-group">
