Added session monitoring: * Modified the API to return how long until a session expires * Modified the API to renew a session * Added a client service to check the session age * Added a component to display a warning when session is close to expiry

--- a/client/src/app/admin-home/admin-home.component.html
+++ b/client/src/app/admin-home/admin-home.component.html
@@ -14,6 +14,7 @@
     </div>
 </div>
 <div class="main-container">
+    <app-heartbeat></app-heartbeat>
     <header class="header-4">
         <div class="branding">
             <a href="..." class="nav-link">
