--- a/client/src/app/student-home/student-home.component.html
+++ b/client/src/app/student-home/student-home.component.html
@@ -14,6 +14,7 @@
     </div>
 </div>
 <div class="main-container">
+    <app-heartbeat></app-heartbeat>
     <header class="header-4">
         <div class="branding">
             <a href="..." class="nav-link">
