Fixed bugs with deleting students and robots.

--- a/client/src/app/robots-list/robots-list.component.html
+++ b/client/src/app/robots-list/robots-list.component.html
@@ -54,7 +54,7 @@
                     <clr-icon class="alert-icon" shape="exclamation-circle"></clr-icon>
                 </div>
                 <span class="alert-text">
-                    {{message}}
+                    {{errorMessage}}
                 </span>
             </div>
         </div>
