--- a/client/src/app/heartbeat/heartbeat.component.html
+++ b/client/src/app/heartbeat/heartbeat.component.html
@@ -15,7 +15,8 @@
                     </span>
                 </div>
             </div>
-        </div>    </div>
+        </div>
+    </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-primary" (click)="doRenew()">
             Renew
