--- a/client/src/app/student-home/student-home.component.html
+++ b/client/src/app/student-home/student-home.component.html
@@ -22,12 +22,6 @@
                 <span class="title">NaoBlocks</span>
             </a>
         </div>
-        <div class="header-nav">
-            <a href="javascript://" class="nav-link nav-text">Play</a>
-            <a href="javascript://" class="nav-link nav-text">Stop</a>
-            <a href="javascript://" class="nav-link nav-text">Load</a>
-            <a href="javascript://" class="nav-link nav-text">Save</a>
-        </div>
         <div class="header-actions">
             <clr-dropdown>
                 <button class="nav-icon" clrDropdownTrigger aria-label="toggle settings menu">
@@ -46,10 +40,67 @@
         </div>
     </header>
     <div class="content-container">
+        <clr-vertical-nav [clrVerticalNavCollapsible]="true">
+            <a clrVerticalNavLink href="javascript://" (click)="doPlay()">
+                <clr-icon clrVerticalNavIcon shape="play" class="is-solid"></clr-icon>
+                Play
+            </a>
+            <a clrVerticalNavLink href="javascript://" (click)="doStop()">
+                <clr-icon clrVerticalNavIcon shape="stop" class="is-solid"></clr-icon>
+                Stop
+            </a>
+            <div class="nav-divider"></div>
+            <a clrVerticalNavLink href="javascript://" (click)="doLoad()">
+                <clr-icon clrVerticalNavIcon shape="upload"></clr-icon>
+                Load
+            </a>
+            <a clrVerticalNavLink href="javascript://" (click)="doSave()">
+                <clr-icon clrVerticalNavIcon shape="download"></clr-icon>
+                Save
+            </a>
+            <div class="nav-divider"></div>
+            <a clrVerticalNavLink href="javascript://" (click)="doChangeSpeed()">
+                <clr-icon clrVerticalNavIcon shape="replay-all"></clr-icon>
+                Change Speed
+            </a>
+        </clr-vertical-nav>
         <div class="content-area">
             <div id="blocklyDiv" style="width: 100%; height: 100%"></div>
         </div>
     </div>
     <app-about></app-about>
+    <clr-modal [(clrModalOpen)]="sendingToRobot" [clrModalStaticBackdrop]="false" [clrModalClosable]="false"
+        [clrModalSize]="'xl'">
+        <h3 class="modal-title">Starting Program</h3>
+        <div class="modal-body">
+            <ul class="clr-timeline clr-timeline-horizontal">
+                <li class="clr-timeline-step" *ngFor="let step of steps">
+                    <clr-spinner clrMedium *ngIf="step.isCurrent"></clr-spinner>
+                    <clr-icon [attr.shape]="step.image" *ngIf="!step.isCurrent"></clr-icon>
+                    <div class="clr-timeline-step-body">
+                        <span class="clr-timeline-step-title">{{step.title}}</span>
+                        <span class="clr-timeline-step-description">{{step.description}}</span>
+                    </div>
+                </li>
+            </ul>
+            <div class="alert alert-danger" role="alert" *ngIf="startMessage">
+                <div class="alert-items">
+                    <div class="alert-item static">
+                        <div class="alert-icon-wrapper">
+                            <clr-icon class="alert-icon" shape="exclamation-circle"></clr-icon>
+                        </div>
+                        <span class="alert-text">
+                            {{startMessage}}
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-primary" (click)="doCancelSend()">
+                {{startMessage ? 'Close' : 'Cancel'}}
+            </button>
+        </div>
+    </clr-modal>
     <app-change-role [role]="'Student'"></app-change-role>
 </div>
