--- a/client/src/app/student-home/student-home.component.html
+++ b/client/src/app/student-home/student-home.component.html
@@ -54,7 +54,7 @@
                 <clr-icon clrVerticalNavIcon shape="upload"></clr-icon>
                 Load
             </a>
-            <a clrVerticalNavLink href="javascript://" (click)="doSave()">
+            <a clrVerticalNavLink href="javascript://" (click)="doSave()" [class.disabled]="!currentUser">
                 <clr-icon clrVerticalNavIcon shape="download"></clr-icon>
                 Save
             </a>
@@ -70,7 +70,7 @@
     </div>
     <app-about></app-about>
     <app-change-role [role]="'Student'"></app-change-role>
-    <app-save-program></app-save-program>
+    <app-save-program (save)="onSave($event)"></app-save-program>
     <clr-modal [(clrModalOpen)]="sendingToRobot" [clrModalStaticBackdrop]="false" [clrModalClosable]="false"
         [clrModalSize]="'xl'">
         <h3 class="modal-title">Starting Program</h3>
