--- a/client/src/app/student-home/student-home.component.html
+++ b/client/src/app/student-home/student-home.component.html
@@ -50,7 +50,7 @@
                 Stop
             </a>
             <div class="nav-divider"></div>
-            <a clrVerticalNavLink href="javascript://" (click)="doLoad()">
+            <a clrVerticalNavLink href="javascript://" (click)="doLoad()" [class.disabled]="!currentUser">
                 <clr-icon clrVerticalNavIcon shape="upload"></clr-icon>
                 Load
             </a>
@@ -71,6 +71,7 @@
     <app-about></app-about>
     <app-change-role [role]="'Student'"></app-change-role>
     <app-save-program (save)="onSave($event)"></app-save-program>
+    <app-load-program (load)="onLoad($event)"></app-load-program>
     <clr-modal [(clrModalOpen)]="sendingToRobot" [clrModalStaticBackdrop]="false" [clrModalClosable]="false"
         [clrModalSize]="'xl'">
         <h3 class="modal-title">Starting Program</h3>
