Implemented updating student and robot passwords.

--- a/client/src/app/robot-editor/robot-editor.component.scss
+++ b/client/src/app/robot-editor/robot-editor.component.scss
@@ -5,3 +5,9 @@
 .clr-control-label{
     text-align: right;
 }
+
+.clr-toggle-wrapper {
+    .clr-control-label{
+        text-align: left;
+    }    
+}
