--- a/client/src/app/robot-editor/robot-editor.component.html
+++ b/client/src/app/robot-editor/robot-editor.component.html
@@ -1,15 +1,27 @@
 <form clrForm>
     <clr-input-container>
         <label class="clr-col-12 clr-col-md-2">Machine Name:</label>
-        <input class="clr-col-12 clr-col-md-10" clrInput type="text" [(ngModel)]="robot.machineName" name="machineName" required />
-        <clr-control-helper>The machine name of the robot (name assigned by the OS), must be unique.</clr-control-helper>
+        <input class="clr-col-12 clr-col-md-10" clrInput type="text" [(ngModel)]="robot.machineName" name="machineName"
+            required />
+        <clr-control-helper>The machine name of the robot (name assigned by the OS), must be unique.
+        </clr-control-helper>
         <clr-control-error>Machine name is missing</clr-control-error>
     </clr-input-container>
     <clr-input-container>
         <label class="clr-col-12 clr-col-md-2">Friendly Name:</label>
-        <input class="clr-col-12 clr-col-md-10" clrInput type="text" [(ngModel)]="robot.friendlyName" name="friendlyName" required />
+        <input class="clr-col-12 clr-col-md-10" clrInput type="text" [(ngModel)]="robot.friendlyName"
+            name="friendlyName" required />
         <clr-control-helper>The human understandable name of the robot, should be unique.</clr-control-helper>
         <clr-control-error>Friendly name is missing</clr-control-error>
+    </clr-input-container>
+    <clr-toggle-wrapper class="clr-offset-md-2" style="margin-top: 1em;" *ngIf="!robot.isNew">
+        <input type="checkbox" clrToggle value="true" name="changePassword" [(ngModel)]="showPassword" />
+        <label>Change Password</label>
+    </clr-toggle-wrapper>
+    <clr-input-container *ngIf="showPassword || robot.isNew">
+        <label class="clr-col-12 clr-col-md-2">Password:</label>
+        <input class="clr-col-12 clr-col-md-10" clrInput type="text" [(ngModel)]="robot.password" name="password" />
+        <clr-control-helper>The password for the robot.</clr-control-helper>
     </clr-input-container>
     <div class="btn-group" style="margin-top: 1em;" class="clr-col-12 clr-offset-md-2 clr-col-md-10">
         <button class="btn btn-primary" (click)="doSave()">Save</button>
