--- a/client/src/app/student-editor/student-editor.component.html
+++ b/client/src/app/student-editor/student-editor.component.html
@@ -5,11 +5,14 @@
         <clr-control-helper>The name of the student, must be unique.</clr-control-helper>
         <clr-control-error>Student name is missing</clr-control-error>
     </clr-input-container>
-    <clr-input-container *ngIf="student.isNew">
+    <clr-toggle-wrapper class="clr-offset-md-2" style="margin-top: 1em;" *ngIf="!student.isNew">
+        <input type="checkbox" clrToggle value="true" name="changePassword" [(ngModel)]="showPassword" />
+        <label>Change Password</label>
+    </clr-toggle-wrapper>
+    <clr-input-container *ngIf="showPassword || student.isNew">
         <label class="clr-col-12 clr-col-md-2">Password:</label>
-        <input class="clr-col-12 clr-col-md-10" clrInput type="text" [(ngModel)]="student.password" name="password" required />
-        <clr-control-helper>The password for a new student.</clr-control-helper>
-        <clr-control-error>Student password is missing</clr-control-error>
+        <input class="clr-col-12 clr-col-md-10" clrInput type="text" [(ngModel)]="student.password" name="password" />
+        <clr-control-helper>The password for the student.</clr-control-helper>
     </clr-input-container>
     <div class="btn-group" style="margin-top: 1em;" class="clr-col-12 clr-offset-md-2 clr-col-md-10">
         <button class="btn btn-primary" (click)="doSave()">Save</button>
