--- a/client/src/app/system-status/system-status.component.html
+++ b/client/src/app/system-status/system-status.component.html
@@ -1,3 +1,34 @@
+<div class="clr-row" style="margin-bottom: 1em;">
+    <div class="clr-col">
+        <div *ngIf="isLoading">
+            <span class="spinner spinner-inline">
+                [Loading]
+            </span>
+            <span>
+                Loading, please wait...
+            </span>
+        </div>
+        <div class="alert alert-danger" role="alert" *ngIf="status.error">
+            <div class="alert-items">
+                <div class="alert-item static">
+                    <div class="alert-icon-wrapper">
+                        <clr-icon class="alert-icon" shape="exclamation-circle"></clr-icon>
+                    </div>
+                    <span class="alert-text">
+                        {{status.error}}
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="clr-col-1">
+        <div class="btn-group">
+            <button type="button" class="btn btn-sm btn-secondary" (click)="refreshStatus()" [disabled]="isLoading">
+                <clr-icon shape="refresh"></clr-icon> Refresh
+            </button>
+        </div>
+    </div>
+</div>
 <clr-accordion>
     <clr-accordion-panel>
         <clr-accordion-title>
@@ -35,7 +66,7 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let robot of status.robotsConnected">
-                        <td class="left">{{robot.name}}</td>
+                        <td class="left">{{robot.machineName}} [{{robot.friendlyName}}]</td>
                         <td>{{robot.status}}</td>
                         <td>{{robot.isAvailable ? 'Yes' : 'No'}}</td>
                     </tr>
