More work on starting a program: * send robot and user status to the browser * allow validating messages based on client type * store the state from the robot in the client * pass the correct parameters to download and start a program * implemented robot up to downloading a program AST

--- a/client/src/app/system-status/system-status.component.html
+++ b/client/src/app/system-status/system-status.component.html
@@ -1,7 +1,7 @@
 <div class="clr-row" style="margin-bottom: 1em;">
     <div class="clr-col-1">
         <div class="btn-group">
-            <button type="button" class="btn btn-sm btn-secondary" (click)="refreshStatus()" [disabled]="isLoading">
+            <button type="button" class="btn btn-sm btn-secondary" (click)="refreshStatus()">
                 <clr-icon shape="refresh"></clr-icon> Refresh
             </button>
         </div>
