More work on initial release candidate: * added a publish profile * moved db and security configuration to their own files * start embedded server when first needed * allow configuring database settings * display system version on start screen

--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -7,11 +7,11 @@
         <div class="login-group">
             <clr-input-container>
                 <label>Username</label>
-                <input type="text" name="username" clrInput [(ngModel)]="username"/>
+                <input type="text" name="username" clrInput [(ngModel)]="username" />
             </clr-input-container>
             <clr-password-container>
                 <label>Password</label>
-                <input type="password" name="password" clrPassword [(ngModel)]="password"/>
+                <input type="password" name="password" clrPassword [(ngModel)]="password" />
             </clr-password-container>
             <clr-select-container>
                 <label>Role</label>
@@ -25,6 +25,19 @@
                 {{loginError}}
             </div>
             <button type="submit" class="btn btn-primary">Next</button>
+            <div class="version-information">
+                <span *ngIf="!version">
+                    <span class="spinner spinner-inline">
+                        (_)
+                    </span>
+                    <span>
+                        Loading version...
+                    </span>
+                </span>
+                <span *ngIf="version">
+                    Version {{version.version}}
+                </span>
+            </div>
         </div>
     </form>
 </div>
