--- a/client/src/app/login/login.component.scss
+++ b/client/src/app/login/login.component.scss
@@ -1,3 +1,10 @@
 .login-wrapper {
     background: none;
 }
+
+.version-information {
+    text-align: center;
+    margin-top: 2em;
+    font-size: smaller;
+    font-style: italic;
+}
