--- a/client/src/app/logs-list/logs-list.component.html
+++ b/client/src/app/logs-list/logs-list.component.html
@@ -15,7 +15,7 @@
                     {{robot.machineName}} [{{robot.friendlyName}}]
                     <ng-template clrIfExpanded (clrIfExpandedChange)="$event ? loadLogs(robot) : null">
                         <clr-tree-node *ngFor="let log of robot.logs">
-                            <button class="clr-treenode-link" [class.active]="log.selected" (click)="log.selected = true">
+                            <button class="clr-treenode-link" [class.active]="log.selected" (click)="viewLogs(log)">
                                 <clr-icon shape="file"></clr-icon>
                                 {{log.whenAdded | date:'h:mm:ss a - d MMM, y' }}
                             </button>
@@ -24,7 +24,34 @@
                 </clr-tree-node>
             </clr-tree>
         </div>
-        <div class="clr-col-6"></div>
+        <div class="clr-col-6" *ngIf="isLogSelected">
+            <div *ngIf="isLogLoading">
+                <span class="spinner spinner-inline">
+                    (_)
+                </span>
+                <span>
+                    Loading, please wait...
+                </span>
+            </div>
+            <table class="table" *ngIf="!isLogLoading">
+                <thead>
+                    <tr>
+                        <th class="right">Time</th>
+                        <th class="left">Description</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let line of selectedLog.lines || []">
+                        <td class="right">
+                            {{line.whenAdded | date:'h:mm:ss a'}}
+                        </td>
+                        <td class="left">
+                            {{line.description}}
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 
     <div class="alert alert-danger" role="alert" *ngIf="errorMessage">
