Added a Nao header icon.

--- a/client/src/app/admin-home/admin-home.component.html
+++ b/client/src/app/admin-home/admin-home.component.html
@@ -18,7 +18,7 @@
     <header class="header-4">
         <div class="branding">
             <a href="..." class="nav-link">
-                <clr-icon shape="book"></clr-icon>
+                <img src="assets/nao.svg" style="width: 32px; margin-right: 1em;">
                 <span class="title">NaoBlocks</span>
             </a>
         </div>
